trying to update request status